fix: bottom spacing

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,10 @@
   --chat-content-background-image: url(/chat-background-dark.png);
 }
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   height: calc(100%);
   /* overflow: hidden; */
@@ -67,9 +71,9 @@ body {
 #root {
   overflow: hidden;
   text-align: center;
-  height: calc(100% - env(safe-area-inset-top) - env(safe-area-inset-bottom));
+  /* height: calc(100% - env(safe-area-inset-top) - env(safe-area-inset-bottom)); */
   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
-  /* height: 100%; */
+  height: 100%;
   width: 100%;
 }
 
